Refactored code to leverage Finder interface feature. ALl tests are passed after refactoring.